---------------------------------------------------------------------------------------------------
Version: 2.10.8
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.10.7
Date: 2025-11-25
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.10.6
Date: 2025-11-25
  Features:
    - Added experimental better blueprint paste handling! This supports pasting wires from cut entities, and pasting from the blueprint library. Currently experimental, can be disabled with a new per-player setting.
    - Allow disabling staged tiles in space platforms.
---------------------------------------------------------------------------------------------------
Version: 2.10.5
Date: 2025-11-23
  Bugfixes:
    - Fixed NEW crash when attempting to take a empty blueprint.
    - Exported blueprint books will now have the first blueprint selected by default.
---------------------------------------------------------------------------------------------------
Version: 2.10.4
Date: 2025-11-23
  Bugfixes:
    - Fixed that the "stage deconstruct" indicator would not be shown for newly created entities.
---------------------------------------------------------------------------------------------------
Version: 2.10.3
Date: 2025-11-21
  Bugfixes:
    - Fixed not being able to take a blueprint of a stage that includes tiles but all entities are _filtered out_.
---------------------------------------------------------------------------------------------------
Version: 2.10.2
Date: 2025-11-20
  Bugfixes:
    - Fixed space platform hubs not being present when a stage is inserted at the front.
    - Fixed on spaceships, that extra space platform may be present when inserting a stage.
    - Fixed that tiles may sometimes not be fixed when rebuilding a stage.
    - Fixed that importing a space platform project would use normal world surfaces instead.